# VouchAgent

./: .gitignore  LICENSE  README.md  README.zh-CN.md
agent/: .env.example  chain.py  coordinator.py  fetcher.py  hire_cycle.py  judge.py  keeper.py  main.py  requirements.txt  risk.py  sla_evaluator.py  verifier_network.py  vouch_chain.py  vouch_cycle.py  vouch_ledger.py  vouch_state.py  x402_buyer.py
contract/: Cargo.toml  Odra.toml  build.rs
contract/src/: lib.rs  rwa_oracle.rs
web/: requirements.txt  server.py  spike_server.py  vouch_ledger.json  vouch_state.json
web/static/: agent-platform.html  index.html  spike-wallet.html  vouch-dapp.js
web/static/api/: rpc.js
x402/: README.md  server-oracle-handler.go.txt
