[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.8.1", features = [], default-features = false }
odra-casper-livenet-env = { version = "2.8.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.1" }

[dev-dependencies]
odra-test = { version = "2.8.1" }

[build-dependencies]
odra-build = { version = "2.8.1" }

[[bin]]
name = "contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "contract_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deploy"
path = "bin/deploy.rs"
required-features = ["livenet"]

[[bin]]
name = "submit"
path = "bin/submit.rs"
required-features = ["livenet"]

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
